// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User can find a word by id 1`] = `
{
  "additionalInfo": "very useful information",
  "audioUrl": "mock.mp3",
  "defs": [
    {
      "def": "{bc} a strong substance that stretches and that is made out of chemicals or from the juice of a tropical tree",
      "examples": [
        {
          "text": "a rubber plantation",
          "translation": null,
        },
        {
          "text": "a rubber tree",
          "translation": null,
        },
      ],
    },
    {
      "def": "{b}{it}rubbers{/it}{/b} {it}US{/it}, {it}informal + old-fashioned{/it} {bc} shoes or boots that are made of rubber and that fit over your regular shoes to keep them dry",
      "examples": [],
    },
  ],
  "id": Any<String>,
  "imgDesc": null,
  "imgUrl": "mock.jpeg",
  "isLearned": null,
  "isOffensive": false,
  "level": "B2",
  "name": "egalitarian",
  "particle": "noun",
  "shortDef": [
    "aiming for equal wealth, status, etc., for all people",
  ],
  "stems": [
    "egalitarian",
    "egalitarianism",
    "egalitarians",
  ],
  "tags": [],
  "transcription": "iˌɡælɪˈteəriən",
}
`;

exports[`User can get see the information about his/her account 1`] = `
{
  "user": {
    "email": "test2@test.com",
    "firstName": "User",
    "lastName": "Test",
    "role": "MEMBER",
  },
}
`;

exports[`User can get the words list 1`] = `
{
  "hasNext": false,
  "words": [],
  "wordsCount": 0,
}
`;

exports[`User can login with correct password 1`] = `
{
  "email": "test2@test.com",
  "firstName": "User",
  "lastName": "Test",
  "token": "mock_token",
}
`;

exports[`User can save a word 1`] = `
{
  "additionalInfo": "additional info",
  "audioUrl": "mock.mp3",
  "defs": [
    {
      "def": "a person who believes that everyone is equal and should have the same rights and opportunities",
      "examples": [
        {
          "text": "He described himself as ‘an {it}egalitarian{/it}’.",
        },
      ],
    },
    {
      "def": "aiming for equal wealth, status, etc., for all people",
      "examples": [
        {
          "text": "He is a committed {it}egalitarian{/it}",
        },
        {
          "text": "Even in the {it}egalitarian{/it} Nordic country, Marin felt hergender and age sometimes received too much emphasis. Kostya Manenkov And Karl Ritter, USA TODAY, 21 Aug. 2022",
        },
      ],
    },
  ],
  "id": Any<String>,
  "imgUrl": "mock.jpeg",
  "isOffensive": false,
  "level": "C1",
  "name": "egalitarian",
  "particle": "noun",
  "shortDef": [
    "aiming for equal wealth, status, etc., for all people",
  ],
  "stems": [
    "egalitarian",
    "egalitarianism",
    "egalitarians",
  ],
  "tags": [],
  "transcription": "iˌɡælɪˈteəriən",
  "uuid": "74046e79-e4c9-4b52-ac96-cb7ae98fb601",
}
`;

exports[`User can sign up 1`] = `
{
  "email": "test2@test.com",
  "firstName": "User",
  "id": Any<String>,
  "lastName": "Test",
  "token": "mock_token",
}
`;

exports[`User can update a word 1`] = `
{
  "updateWord": {
    "additionalInfo": "very useful information",
    "audioUrl": "mock.mp3",
    "defs": [
      {
        "def": "{bc} a strong substance that stretches and that is made out of chemicals or from the juice of a tropical tree",
        "examples": [
          {
            "text": "a rubber plantation",
          },
          {
            "text": "a rubber tree",
          },
        ],
      },
      {
        "def": "{b}{it}rubbers{/it}{/b} {it}US{/it}, {it}informal + old-fashioned{/it} {bc} shoes or boots that are made of rubber and that fit over your regular shoes to keep them dry",
        "examples": [],
      },
    ],
    "imgUrl": "mock.jpeg",
    "isOffensive": false,
    "level": "B2",
    "name": "egalitarian",
    "particle": "noun",
    "shortDef": [
      "aiming for equal wealth, status, etc., for all people",
    ],
    "stems": [
      "egalitarian",
      "egalitarianism",
      "egalitarians",
    ],
    "tags": [],
    "transcription": "iˌɡælɪˈteəriən",
    "uuid": "74046e79-e4c9-4b52-ac96-cb7ae98fb601",
  },
}
`;
